bug#59503: explain extended crash in get_mm_leaf

The problem was during partitioning pruning.
Partitioning pruning does not use any real indexes
(instead uses the partitioning function)
so one must check if real indexes is in use before trying to
reference them.